--- a/WCDMA_UMTS3.5
+++ b/WCDMA_UMTS3.5
@@ -49,7 +49,43 @@ R-标准定义:
 4.有小区rank高于当前服务小区-->在服务小区已经驻留了一定的时间(15s)-->满足其他的S-标准-->重选至新小区
 
 [6]软切换
+UE组合从nodeB接收的字符; RNC从nodeB选择最佳的无线帧;
+软切换中的消息:测量控制; 测量报告; 活动集更新; 活动集更新完成;
 
+软切换-concept:
+软切换允许UE同时和多个nodeB建立连接,等待确定了要切换的目标小区后再断开之前的那个小区连接.当工作在专用信道上时,UE持续搜寻并且测量着邻小区的信号强度,并将测量信息整理成报告上发给RNC.
+
+活动集:
+活动集包含了一个UE包含的所有小区当前支持的一个能连接到UE的无线链路.在专用信道使用期间,活动集一定要包含至少1个小区,或许会包含最多8个小区,这种UE和所有小区在活动集中被称作是在"软切换中".
+
+活动集更新:
+由RNC决定,基于UE上报的测量数据,当小区需要被添加或移除到活动集时,RNC就会发送给UE一个"active set update"消息.(如果一个无线链路被添加,RNC在链路上建立联系,在发送更新消息;当一条无线链路被移除,RNC会在收到UE实际移除,活动集更新后,再解除RNC和UE的无线链路连接)
+
+RNC 选择器:
+每一个nodeB向RNC发送它的"最佳接收帧".
+
+[7]softer handover
+UE组合从每个小区接收的字符; RNC从每个小区选择最佳的无线帧;
+软切换中的消息:测量控制; 测量报告; 活动集更新; 活动集更新完成;
+
+concept:
+当有多个无线链路接入存在在"UE"和"归属于同一个nodeB的多个不同的小区"之间.nodeB接收的每一个小区的信号都是非相干的?,并且向RNC提前了一个单独帧.
+softer切换建立和软切换的建立流程相似,用活动集更新和测量报告等等.
+
+综合-软切换和softer切换:
+两者不是互相排斥的,一个UE可以通过softer切换连接基于一个nodeB的多个小区,同时也可以通过软切换连接在多个nodeB上.
+
+[8]硬切换
+发生的原因:
+频间切换; 移动端一定要调整远离之前服务的频点后,再调到新频点.
+系统间的小区切换; 系统间的小区切换,必须要先断开和原系统的链路.
+物理信道重配置; 例如帧偏移量改变,这可能会包含nodeB或小区的改变,但是会要求先破坏无线链路并撤除.
+RNC之间的切换; 如果RNC之间lur接口不支持,则会建立"一个nodeB"到"两个不同RNC"的连接(硬切换过程,nodeB作为交换点).
+
+在建立一条新链路之前,所有存在的无线链路都被"丢弃".这会导致短暂的话音/数据交流中断,先退出原链路,再建立新链路进入.
+
+硬切换消息:
+UE和UTRAN之间的硬切换消息类型取决于硬切换的原因(切换的发起方是UTRAN还是UE/物理信道重配置/传输信道重配置/Rb建立/RB释放/RB重配置).
 
 
 
