--- a/WCDMA_UMTS3.5
+++ b/WCDMA_UMTS3.5
@@ -278,7 +278,7 @@ AMR_5.15 	5.15 kbit/s
 AMR_4.75 	4.75 kbit/s
 AMR_SID 	1.80 kbit/s
 
-AMR的模式决定网络传输话音的质量和网络的容量,一个呼叫会被建立在一种模式下并在此呼叫过程中AMR-mode不会改变."Tandem free operation"模式是一个例外,当一个UMTS的移动端和一个GSM的移动端进入到一个呼叫过程,这种情况下,AMR mode会基于GSM链路质量在进行自动调整,调整频率大概是20ms一次.
+AMR的模式决定网络传输话音的质量和网络的容量,一个呼叫会被建立在一种模式下并在本次呼叫过程中AMR-mode不会改变."Tandem free operation"模式是一个例外,当一个UMTS的移动端和一个GSM的移动端进入到一个呼叫过程,这种情况下,AMR mode会基于GSM链路质量在进行自动调整,调整频率大概是20ms一次.
 
 有三种模式被设计用来适应,GSM EFR(增强型全速率)/IS-641(北美的TDMA标准)/PDC-EFR(Association of Radio Industries and Businesses/日本无线工业及商贸联合会-标准).
 
