--- a/WCDMA_UMTS3.5
+++ b/WCDMA_UMTS3.5
@@ -34,7 +34,7 @@ Squal = Qqualmeas – Qqualmin(CPICH-Ec/Io的最小值)
 Pcompensation = max (UE_TX_PWR_MAX_RACH(小区内允许的UE最大发射功率) – P_MAX(UE的最大发射功率), 0)
 -------------------------
 主要测量值即CPICH上的RSCP,Ec/Io.
-小区的前提条件:小区是已经在PLMN上注册了的; 没有被禁止接入; 小区没有处于禁止的LAC位置区.
+小区的前提条件:小区是已经在PLMN上注册了的; 没有被禁止接入; 小区没有处于被禁止的LAC位置区中.
 
 R-标准定义:
 服务小区Rs = Qmeas(s) + Qhyst(s)("时延"应用到服务小区的CPICH的RSCP和Ec/Io测量上去)
