--- a/Thanks.txt
+++ b/Thanks.txt
@@ -4,14 +4,12 @@
 大学的四年可能是我觉得度过的最快的四年也有可能是最难熬的四年，从初入学门的大一新生，到现今在外实习的这一段时间，感概颇多。
 
 
+本篇论文，其实最需要感谢的是我的妈妈和我自己，前者给了我去赋予自己人生意义的机会，后者给了我奋勇前行的能力。这四年里我可以完全不考虑经济和物质的问题，四年里我可以选择在宿舍里疯狂的玩游戏，可以选择只上我喜欢的课而逃掉我觉得无聊的课，可以暑假天天宅在家里通宵看TI，可以把大部分时间花在大多数人都觉得没意义的事情上，所以我要感谢我妈妈，而感谢自己则是要感谢在过去四年里瘫痪在床的自己，正是因为看到了如此不堪的自己，才让我知道我这四年还有些许成长，让我心中竟有些许欣慰。
 
+当然最关键的是，要感谢自己没有因为一时的连跪就以头抢地，没有因为和室友的矛盾就在饮水机里下药，也没有因为课程很无聊就不去上课，更重要的是没有因为自己什么都不会就强迫自己去学自己不感兴趣的东西，大学四年里我接触到了很多我从没见过的东西，仿佛进入了另一个次元，我懂得了为什么自古金发多傲娇，知道了什么是阿姆斯特朗回旋加速式阿姆斯特朗炮，从荒木老师的漫画中学到了各种引领时代潮流的服装设计知识和奇特姿势，最重要的是我对任何事都保持着“我很好奇”的态度，另外最后我还想说一句，海贼一生推。
 
-
-
-
-本篇论文，首要感谢的是我的妈妈和我自己，前者给了我去赋予自己人生意义的机会，后者给了我奋勇前行的能力。这四年里我可以完全不考虑经济和物质的问题，四年里我可以选择在宿舍里疯狂的玩游戏，可以选择只上我喜欢的课而逃掉我觉得无聊的课，可以暑假天天宅在家里看TI和，可以把大部分时间花在大多数人都觉得没意义的事情上，所以我要感谢我妈妈，而感谢自己则是要感谢在过去四年里处于颓废瘫痪在床的自己，正是因为看到了如此不堪的自己，才让我知道我这四年还有些许成长，让我心中有些许欣慰。
-
-当然最关键的是，要感谢自己没有因为一时的连跪就以头抢地，也没有因为课程很无聊就不去上课，更重要的是没有因为自己什么都不会就强迫自己去学自己不感兴趣的东西，大学四年里我接触到了很多我从没见过的东西，仿佛进入了另一个次元，我懂得了为什么自古金发多傲娇，知道了什么是阿姆斯特朗回旋加速式阿姆斯特朗炮，从荒木老师的漫画中学到了各种引领时代潮流的服装设计知识，最重要的是我对任何事都保持着“我很好奇”的态度，另外最后我还想说一句，海贼一生推。
+感谢所有曾经想过我的名字的人，感谢妈妈，感谢理工大学，感谢贾老师，感谢赵绍南，廖先进，陈泓帆，陈雄，是你们的陪伴让我可以在开黑时尽情的嘲讽对面，
+当然最后还要感谢党，感谢国家，没有你们就没有我妈，没有我妈就没有我，最重要的是，感谢地球，感谢地球上出现了我们这个文明。
 
 
 
