--- a/Thanks.txt
+++ b/Thanks.txt
@@ -16,7 +16,7 @@
 
 感谢所有还记着我名字的人，感谢妈妈，是你的奉献让我能够不一边喝西北风一边上课；感谢贾老师在大四的后半段对我论文的些许指点和引导建议；感谢理工大学，能够接受我这个不是太优秀的高中毕业生；感谢赵绍南，廖先进，陈泓帆，陈雄，是你们的陪伴让我度过了最开心的游戏时间；还要感谢radiohead，梶浦由记，泽野弘之，增田俊郎，flow，没有你们的音乐，就没有这篇毕业设计的论文；感谢days，是你让我在最关键的一段时间里懂得了“不要哀求，学会争取，若能如此，终有所得”。
 
-烟花起落，杯盏交错，每个人都在回头和自己的过去道别，奔向各自万劫不复的人生炼狱。
+烟花起落，杯盏交错，每个人都在回头和自己的过去道别，奔向各自万劫不复的人生。
 
 
 
