--- a/Thanks.txt
+++ b/Thanks.txt
@@ -1,20 +1,18 @@
 致谢
 
-之前一直在想论文的致谢一段要怎么开头，我想论文的最后这一部分应该可以写得随意一点吧，论文写到这里，大学四年的最终点都在这里了，我的心也已经开始躁动了起来，就来慢慢说吧。
-
-
-
-大学的四年可能是我觉得度过的最快的四年也有可能是最难熬的四年，从初入学门的大一新生，到现今在外实习的这一段时间，感概颇多。
+之前一直在想论文的致谢这一段要怎么开头，我想论文的最后这一部分应该可以写得随意一点吧，论文写到这里，大学四年的最终点也都在这里了，我的心也已经开始躁动了起来，大学的四年可能是我觉得度过的最快的四年也可能是最难熬的四年，从初入学门的大一新生，到最近在外实习的这一段时间，感概颇多，然后就来慢慢说谢谢的事吧。
 ----------
-然后来说说谢谢的事，先谢党，还有国家。
+先谢党，还有国家。
 
-其次感谢自己的母校和毕设的指导老师贾勇老师，谢谢母校能不嫌弃我，理工校园虽然也没有逛完过，新修的教学楼和图书馆也没有去过，但我会永远记住在这里度过的3年半时间；感谢贾老师，因为贾老师应该是大学期间和我说话最多的老师了。虽然我的课题和贾老师的研究方向关系不大，但还是谢谢老师忍耐了我在毕设期间的骚扰，对论文定稿的部分给出的一些建议，最重要的贾老师人很平易近人，和贾老师沟通交流很开心。
+其次感谢自己的母校和毕设的指导老师贾勇老师，谢谢母校能不嫌弃我，理工的校园虽然我也没有逛完过，新修的教学楼和图书馆也没有去过，但我会永远记住在这里度过的3年半时间；感谢贾老师，因为贾老师应该是大学期间和我说话最多的老师了，虽然我的课题和贾老师的研究方向关系不大，但还是谢谢老师忍耐了我在毕设期间的骚扰，以及对论文定稿的部分给出的一些建议，最重要的是贾老师很平易近人，和贾老师沟通交流很开心。
 
-好的我继续讲下去，本篇论文，我最想感谢的是我的妈妈和我自己，前者给了我去赋予自己人生意义的机会，后者给了我奋勇前行的能力。这四年里我可以完全不考虑经济和物质的问题，四年里我可以选择在宿舍里疯狂的玩游戏，可以选择只上我喜欢的课而逃掉我觉得无聊的课，可以暑假天天宅在家里通宵看TI，可以把大部分时间花在大多数人都觉得没意义的事情上，所以我要感谢我妈妈，而感谢自己则是要感谢在过去四年里慵懒的自己，正是因为看到了自己是如此不堪，才让我知道现在的我还有些许成长，让我心中竟有些许欣慰。
+实习单位和室友
 
-当然最关键的是，要感谢自己一直保持着对新鲜事物的好奇心，感谢自己没有因为课程太无聊就一直逃课，更重要的是没有因为自己什么都不会就强迫自己去学自己不感兴趣的东西，大学四年里我接触到了很多我从没见过的东西，仿佛进入了另一个次元，我懂得了为什么自古金发多傲娇，知道了什么是阿姆斯特朗回旋加速式阿姆斯特朗炮，从荒木老师的漫画中学到了各种引领时代潮流的服装设计知识和奇特姿势，最重要的是我对任何事都保持着“我很好奇”的态度，另外最后我还想说一句，海贼一生推。
+好的我继续讲下去，本篇论文的最后，我最想感谢的是我的妈妈和我自己，前者给了我去赋予自己人生意义的机会，后者给了我奋勇前行的能力。这四年里我可以完全不考虑经济和物质的问题，四年里我可以选择在宿舍里疯狂的玩游戏，可以选择只上我喜欢的课而逃掉我觉得无聊的课，可以暑假天天宅在家里通宵看TI，可以把大部分时间花在大多数人都觉得没意义的事情上，所以我要感谢我妈妈，而感谢自己则是要感谢在过去四年里慵懒的自己，正是因为看到了自己是如此不堪，才让我知道现在的我还有些许成长，让我心中竟有些许欣慰。
 
-感谢所有还记着我名字的人，感谢妈妈，是你的奉献让我能够不一边喝西北风一边上课；感谢贾老师在大四的后半段对我论文的些许指点和引导建议；感谢理工大学，能够接受我这个不是太优秀的高中毕业生；感谢赵绍南，廖先进，陈泓帆，陈雄，是你们的陪伴让我度过了最开心的游戏时间；还要感谢radiohead，梶浦由记，泽野弘之，增田俊郎，flow，没有你们的音乐，就没有这篇毕业设计的论文；感谢days，是你让我在最关键的一段时间里懂得了“不要哀求，学会争取，若能如此，终有所得”。
+当然最关键的是，要感谢自己一直保持着对新鲜事物的好奇心，感谢自己没有因为课程太无聊就一直逃课，没有因为自己什么都不会就强迫自己去学自己不感兴趣的东西，大学四年里我接触到了很多我从没见过的东西，仿佛进入了另一个次元，我懂得了为什么自古金发多傲娇，知道了什么是阿姆斯特朗回旋加速式阿姆斯特朗炮，从荒木老师的漫画中学到了各种引领时代潮流的服装设计知识和奇特姿势，最重要的是我对任何事都保持着“我很好奇”的态度，另外最后我还想说一句，海贼一生推。
+
+感谢所有还记着我名字的人，感谢妈妈，是你的奉献让我能够不一边喝西北风一边上课；感谢贾老师在大四的后半段对我论文的指点和引导建议；感谢理工大学，能够接受我这个不是太优秀的高中毕业生；感谢赵绍南，廖先进，陈泓帆，陈雄同学，是你们的陪伴让我度过了最开心的游戏时间；还要感谢radiohead，梶浦由记，泽野弘之，增田俊郎，flow，没有你们的音乐，就没有这篇毕业设计的论文；感谢days，是你让我在最关键的一段时间里懂得了“不要哀求，学会争取，若能如此，终有所得”。
 
 烟花起落，杯盏交错，每个人都在回头和自己的过去道别，奔向各自万劫不复的人生。
 
